[tool.poetry]
name = "ptb-state-handler"
version = "0.1.0"
description = "State handler for python-telegram-bot library"
authors = ["Vlad Pastushenko <iam@vladpi.me>"]
license = "Apache License 2.0"

packages = [
    { include = "state_handler"},
]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.14.0"
python-telegram-bot = ">=12.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
